<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Spinner
            android:id="@+id/spnBranch"
            android:layout_width="365dp"
            android:layout_height="77dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.267" />

    <EditText
            android:id="@+id/phEContact1"
            android:layout_width="224dp"
            android:layout_height="62dp"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="14"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.541"
            android:hint="@string/EmergencyContactReuestHint" />

    <TextView
            android:id="@+id/StartTitle"
            android:layout_width="348dp"
            android:layout_height="41dp"
            android:text="@string/BranchSelection"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.175"
            android:gravity="center" />

    <Button
            android:id="@+id/btnSubBranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SubmitSettingsButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.786" />

    <TextView
            android:layout_width="285dp"
            android:layout_height="36dp"
            android:id="@+id/tvValidPhone"
            app:layout_constraintTop_toBottomOf="@+id/phEContact1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.07"
            android:gravity="center"
            android:textColor="#F44336" />

    <TextView
            android:id="@+id/ECMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/EmergencyContactRequest"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnBranch"
            app:layout_constraintVertical_bias="0.098"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintHorizontal_bias="0.506" />

    <TextView
            android:text="Since this is your first time in the app all steps will be loaded to view. Navigate to the change step order page via the settings button to chnage the order of the steps"
            android:layout_width="389dp"
            android:layout_height="65dp"
            android:id="@+id/tvFirstViewText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.908"
            android:gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>